<?xml version="1.0" encoding="utf-8"?>
<!--
   Copyright (C) 2012 Jimmy Theis. Licensed under the MIT License:
   
   Permission is hereby granted, free of charge, to any person obtaining a copy
   of this software and associated documentation files (the "Software"), to deal
   in the Software without restriction, including without limitation the rights
   to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
   copies of the Software, and to permit persons to whom the Software is
   furnished to do so, subject to the following conditions:
   
   The above copyright notice and this permission notice shall be included in
   all copies or substantial portions of the Software.
  
   THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
   IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
   FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
   AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
   LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
   OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
   SOFTWARE.
-->
<resources>
    <!-- Global -->
    <string name="app_name">Grades</string>
    <!-- Course List Activity -->
    <string name="course_list_activity_title">Courses</string>
    <string name="course_list_activity_menu_add_course">Add Course</string>
    <string name="course_list_activity_menu_about">About</string>
    <string name="course_list_activity_context_menu_edit">Edit</string>
    <string name="course_list_activity_context_menu_delete">Delete</string>
    <string name="course_list_activity_toast_unlocked">Full Version Unlocked!</string>
    <string name="course_list_activity_toast_billing_unavailable">Billing service unavailable. Full Version cannot be activated.</string>
    <string name="course_list_activity_toast_full_version_refunded">Full Version purchase refunded. Full version will no longer be available.</string>
    <string name="course_list_activity_toast_add_course_denied">Full version required to add multiple courses</string>
    <!-- Buy Full Version Fragment -->
    <string name="buy_full_version_fragment_buy_notice">Full version required to add more than one course or save courses between app launches</string>
    <string name="buy_full_version_fragment_buy_button">Buy Full Version</string>
    <!-- Course List Fragment -->
    <string name="course_list_fragment_no_courses_notice">You don\'t have any courses yet.\nTap \"Add Course\" to add one.</string>
    <!-- Add Course Dialog Fragment -->
    <string name="add_course_dialog_fragment_title">New Course</string>
    <string name="add_course_dialog_fragment_course_name">Name:</string>
    <string name="add_course_dialog_fragment_grade_type">Grading Style:</string>
    <string name="add_course_dialog_fragment_grade_type_point_total">Grand Point Total</string>
    <string name="add_course_dialog_fragment_grade_type_percentage">Weighted Percentages</string>
    <string name="add_course_dialog_fragment_create_course_button">Create Course</string>
    <string name="add_course_dialog_fragment_cancel_button">Cancel</string>
    <!-- Edit Course Dialog Fragment -->
    <string name="edit_course_dialog_fragment_title">Edit Course</string>
    <string name="edit_course_dialog_fragment_save_course_button">Save Course</string>
    <!-- Course Activity -->
    <string name="course_activity_menu_add_component">Add Component</string>
    <string name="course_activity_context_menu_edit">Edit</string>
    <string name="course_activity_context_menu_delete">Delete</string>
    <!-- Grade Component List Fragment -->
    <string name="grade_component_list_fragment_no_components_notice">You don\'t have any grade components yet. Tap \"Add Component\" to add one.</string>
    <string name="grade_component_list_fragment_points_earned">Points Earned: %s</string>
    <string name="grade_component_list_fragment_total_points">Total Points: %s</string>
    <string name="grade_component_list_fragment_percentage_earned">Current Percentage: %s</string>
    <string name="grade_component_list_fragment_weight">Weight: %s</string>
    <!-- Course Overview Fragment -->
    <string name="course_overview_fragment_overall_grade">Overall Grade: %s</string>
    <!-- Add Grade Component Dialog -->
    <string name="add_grade_component_dialog_title">Add Grade Component</string>
    <string name="add_grade_component_dialog_name">Name:</string>
    <string name="add_grade_component_dialog_total_points">Total Possible Points:</string>
    <string name="add_grade_component_dialog_weight">Weight (percentage out of 100):</string>
    <string name="add_grade_component_dialog_earned_points">Points Earned:</string>
    <string name="add_grade_component_dialog_earned_percentage">Current Grade (percentage out of 100):</string>
    <string name="add_grade_component_dialog_cancel_button">Cancel</string>
    <string name="add_grade_component_dialog_create_button">Create</string>
    <!-- Edit Grade Component Dialog -->
    <string name="edit_grade_component_dialog_save_button">Save</string>
    <!-- About Activity -->
    <string name="about_activity_title">About</string>
    <string name="about_activity_text">Weighted Grade Calculator is a personal project of mine. I think it is not only useful, but also the perfect sized project for demonstrating a lot of good Android development practices.\n\nAs such, I submit this app to both you, the user, and to you, the developer, as both a handy tool and an example of current Android design and development principles.\n\nThe source code for Weighted Grade Calculator is released under the MIT License and is available from the app\'s web site.\n\nAll original artwork is released under a Creative Commons License (CC BY 3.0) and is also available from the app\'s web site.\n\nCheers!</string>
</resources>